add mu capture numbers;fix captions

--- a/detbeamtest.tex
+++ b/detbeamtest.tex
@@ -448,13 +448,12 @@ perform tests of PID and dE/dx calibration measurements.
 %mis-ID probabilities. 
 \begin{figure}[h!]
   \centering
-\includegraphics[width=0.30\textwidth,height=5.0cm]{figures/pids}
-\includegraphics[width=0.69\textwidth,height=5.0cm]{figures/prkpimu}
+\includegraphics[width=0.53\textwidth,height=6.0cm]{figures/pids}
+\includegraphics[width=0.46\textwidth,height=6.0cm]{figures/prkpimu}
 %\includegraphics[width=\textwidth,height=5.0cm]{figures/pid_curves}
-  \caption{(right) ICARUS simulated track energy loss per unit length as a function of residual 
-range for muons, pions, protons and kaons.  (right) Particle hypothesis curves obtained using a
-neutral-net-based PID for
-each particle type for a bin with residual range  6($\pm$1)~cm.
+  \caption{ICARUS simulated track energy loss per unit length as a function of residual 
+range for muons, pions, protons and kaons (left). Particle hypothesis curves obtained using a
+neutral-net-based PID for each particle type for a bin with residual range of 6($\pm$1)~cm. (right)
 }
 \label{fig:resrange}
 \end{figure}
@@ -542,7 +541,7 @@ from the energy deposition pattern.
 %\includegraphics[width=0.49\textwidth,height=5.0cm]{figures/pid_probabilities}
 \includegraphics[width=0.49\textwidth,height=6.0cm]{figures/eff-bgdrej-diffen}
 \includegraphics[width=0.49\textwidth,height=6.0cm]{figures/APAT600_all_norm}
-  \caption{(Left)Background rejection versus signal efficiency for various energies.
+  \caption{Background rejection versus signal efficiency for various energies ranges (left) and two different wire spacings (right).
 {\color{red}
 }
 }
@@ -616,10 +615,10 @@ calibration of electrons in this energy range.
 
 \subsubsection{Charge sign determination}
 
-It is not possible to determine the charge of the particle on an event by event basis with non-magnetized LAr TPC detectors. A statistical separation will be studied which will make use of differences in muon versus antimuon capture cross sections and lifetime.
+It is not possible to determine the charge of the particle on an event by event basis with non-magnetized LAr TPC detectors. A statistical separation will be studied which will make use of differences in muon versus anti-muon capture cross sections and lifetime.
 %However, the statistical analyst will be possible. We will fit the muon's half time which is different for muons and antimony due to different muon capture cross sections. 
-For the $\mu^+$ for argon we expect about xx\% to be captured and for $\mu^-$ about yy\%. 
-Charge-sign tagged $\mu_\mu$ samples may be useful to constrain exotic possibilities such as
+For the $\mu^-$ we expect about 99.9\% to be captured on argon whereas essentially all $\mu^+$ decay \cite{stopmu}.
+Charge-sign tagged $\nu_\mu$ samples may be useful to constrain exotic possibilities such as
 non-standard neutrino interactions which predict particle-antiparticle survival probability differences. 
 
 
